--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="../src/assets/img/JackPets.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AngelHaven</title>
+    <title>kcc.lk</title>
   </head>
   <body>
     <div id="app"></div>
